ubuntu-utm-vms/guest/manifests/static/ldap-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: ldap
spec:
    selector:
        matchLabels:
            app: "ldap"
    serviceName: "ldap-internal"
    replicas: 1
    template:
        metadata:
            labels:
                app: ldap
        spec:
            containers:
            - name: azaldap
              image: osixia/openldap:1.5.0
              imagePullPolicy: IfNotPresent
              #command: ["/bin/bash","-c","while [ 1 = 1 ] ; do sleep 1; date; done"]
              ports:
              - containerPort: 389
              volumeMounts:
              - mountPath: /var/lib/ldap
                name: ldap-data
              - mountPath: /etc/ldap/slapd.d
                name: ldap-config
              - mountPath: /container/service/slapd/assets/certs
                name: ldap-certs
              - mountPath: /container/environment/01-custom
                name: secret-volume
              - mountPath: /container/run
                name: container-run
            volumes:
              - name: "secret-volume"
                secret:
                  secretName: "ldap-secret"
              - name: container-run
                emptyDir: {}
    volumeClaimTemplates:
    - metadata:
        name: ldap-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs-lvm"
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: ldap-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs-hostpath"
        resources:
          requests:
            storage: 10Mi
    - metadata:
        name: ldap-certs
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs-hostpath"
        resources:
          requests:
            storage: 10Mi
