ubuntu-utm-vms/guest/manifests/static/ldap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap
spec:
  type: NodePort
  selector:
    app: ldap
  ports:
    - name: https-ui-and-api
      protocol: TCP
      port: 389
