ubuntu-utm-vms/guest/manifests/static/ledgerbadger-myminio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myminio
spec:
  type: NodePort
  selector:
    v1.min.io/tenant: myminio
  ports:
    - name: https-actual
      protocol: TCP
      port: 9443
