ubuntu-utm-vms/guest/manifests/static/ledgerbadger-vault-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledgerbadger-vault
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: vault
  ports:
    - name: https-ui-and-api
      protocol: TCP
      port: 8200
